# enron-ctf

./: .gitignore  README.md  load_to_duckdb.py  log.py  pyproject.toml  quality_checks.py  setup.py
