[tool.poetry]
name = "enron-ctf"
version = "0.1.0"
description = "sample data and eval questions for document analysis agent"
authors = ["evanokeefe39 <evan.okeefe39@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kagglehub = {extras = ["polars-datasets"], version = "^0.3.13"}
polars = "^1.33.1"
pandas = "^2.3.2"
duckdb = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
